css/civicrm.css
/* ... */
#crm-container td ul.panel li {
  margin: 0px;
  padding: 0px;
  list-style: none;
  background-image: none;
  border-bottom: 1px solid #CCCCCC;
  width:80px;
}

.btn-slide {
  	text-align: left;
  	text-decoration: none;
  	border: none;
  	cursor: pointer;  
  	position: relative;
  	padding:0px 14px 0 5px;
  	background: url("../i/TreePlus.gif") no-repeat right 1px;
	border-left:1px solid #CCC;
	}

#crm-container .panel li a {
  text-decoration: none;
  padding: 4px;
  color: #333333;
  display: block;
  border-right:none;
}

#crm-container .panel li a:hover { 
  background-color: #999999;
  color: #FFFFFF;
}




/*Styles for Context menu */

#crm-container .contextMenu {
  position   : absolute;
  z-index    : 9999;
  border     : solid 1px #CCC;
  background : #EEE;
  padding    : 0px;
  margin     : 0px;
  display    : none;
  width      : 132px;
}

#squeeze .contextMenu {
  margin     : -95px 0px 0px -275px;
}

#crm-container .contextMenu li {
  background-image: none;
  list-style : none;
  padding    : 0px;
  margin     : 0px;
  border-bottom: 1px solid #CCCCCC;
}

#crm-container .contextMenu a {
  color               : #333;
  text-decoration     : none;
  display             : block;
  line-height         : 20px;
  height              : 20px;
  background-position : 6px center;
  background-repeat   : no-repeat;
  outline             : none;
  padding             : 0px 0px 1px 5px;
}

#crm-container .contextMenu li.hover a {
  color            : #FFF;
  background-color : #999999;
}

/* Styles for Sticky Header */

#crm-container thead div.sticky-header {
  background-color : #E6E6E6;
  font-size        : 1em;
  height           : 15px;
}

#crm-container thead.sticky a {
  color            : #000;
  text-decoration  : none;
  vertical-align   : top;
}

/* loader autocomplete */

body .ac_loading {
  background       : white url('../i/loading.gif') no-repeat right center;
}


/*class for CMS user name check used in profile*/
.cmsmessagebox {
   position    : absolute;
   width       : auto;
   margin-left : 10px;
   padding     : 3px;
}

/* class for text area resizer jquery plugin*/
div.grippie {
    background   : #EEEEEE url('../i/grippie.png') no-repeat scroll center 2px;
    border-color : #DDDDDD;
    border-style : solid;
    border-width : 0pt 1px 1px;
    cursor       : s-resize;
    height       : 9px;
    overflow     : hidden;
}
.resizable-textarea textarea {
    display       : block;
    margin-bottom : 0pt;
    width         : 95%;
    height        : 20%;
}

.ui-tabs .ui-tabs-nav li a, 
.ui-tabs-collapsible .ui-tabs-nav li.ui-tabs-selected a,
.ui-tabs .ui-tabs-nav li.ui-tabs-selected a {
   font-size: 0.9em;
}

.ui-tabs .ui-tabs-nav li a {
   padding: 5px !important;
}

#crm-container div.ui-accordion-content {
   padding: .5em 1em !important;
}

/* Styles for Contact Summary mockup start here. dgg */
.primary {
	FONT-WEIGHT: bold
}

#crm-container .ui-tabs-panel {
    padding : 0em 1.4em 1em 1em;
}

#crm-container div.contactTopBar {
	padding          : 4px;
	LINE-HEIGHT      : 1.4em;
	MARGIN           : 8px 0pt 0px;
	/*FONT-SIZE: 1.1em;*/
	background-color : #eee;
	width            : 100%;
}
#crm-container div.contact_details,
 #crm-container div#contactTopBar {
	padding          : 4px;
	LINE-HEIGHT      : 1.4em;
	MARGIN           : 8px 0pt 0px;
	/*FONT-SIZE: 1.1em;*/
	background-color : #F7F7F7;
	width: 100%;
	clear:both;
}

#crm-container div.contact_panel, 
#crm-container div#contactTopBar {
	display:block;
	width:100%;
	}


#crm-container div.contact_panel *, 
#crm-container div#contactTopBar * {
	border:0px;
	}

#crm-container div.contactCardLeft, #crm-container div#Top {
	WIDTH   : 49%; 
	DISPLAY : block; 
	FLOAT   : left;
}

#crm-container div.contactCardRight {
	WIDTH   : 49%; 
	DISPLAY : block; 
	FLOAT   : right;
}

#crm-container div#contactTopBar .label, 
#crm-container div.contactCardLeft .label, 
#crm-container div.contactCardRight .label {
	color          : DimGray; 
	FONT-SIZE      : 0.95em; 
	VERTICAL-ALIGN : top; 
	FONT-WEIGHT    : bold; 
	MARGIN-RIGHT   : 10px;
}

#crm-container div.contactCardLeft .grouplabel, 
#crm-container div.contactCardRight .grouplabel {
	BORDER-BOTTOM    : grey 1px solid; 
	WIDTH            : 100%; 
	FONT-SIZE        : 0.95em; 
	FONT-WEIGHT      : bold;
	background-color : #ddd;
}

#crm-container div.contact_panel .spacer {
	padding:8px;
}

#crm-container div.contact_panel td, 
#crm-container div#contactTopBar td  {
	padding:4px
	vertical-align : top;
	border-bottom: 1px solid #E2E2E2;
}

#crm-container div.contact_panel td.label, 
#crm-container div#contactTopBar td.label {
	background-color    : #EEEEEE;
	}

#crm-container div#contactTopBar td.label {
    width : 14%;
}

#crm-container div.contact_panel td.label {
    width : 28%;
}

#crm-container div.contact_panel td.last {
	BORDER-BOTTOM: 0px
}

#crm-container #customFields {
	width: 100%;
}

#crm-container #customFields div.contact_panel td {
	BORDER-BOTTOM  : lightgray 1px solid; 
	padding: 4px;
	vertical-align: top;
}

#crm-container #customFields div.contact_panel td.talabel {
	padding:4px 0 0 4px;
	border: 0px;
}

#crm-container #customFields .contact_panel .customFieldGroup {
	background-color : #F7F7F7;
	line-height      : 1.4em;
	margin           : 8px 0 0;
	padding          : 4px;
	width            : 100%;
}



#crm-container span.email-hold a:link, 
#crm-container span.email-hold a:visited, 		
#crm-container span.do-not-email a:link, 
#crm-container span.email-hold a:visited {
	color: #ff6655 !important
	}


#crm-container div.buttons {
	TEXT-ALIGN       : right;
    margin           : 8px 0 0;
	padding          : 4px 4px 2px 0;
	background-color : #fff;
	border           : none;
}

#crm-container div.buttons INPUT,
#crm-container div.buttons SELECT {
	FONT-SIZE      : 0.9em; 
	VERTICAL-ALIGN : top !important
}


#crm-container div.buttons #actions {
	TEXT-ALIGN : left; 
	/*WIDTH: 89%;*/ 
	FLOAT      : left
	}
/* ... */

